--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 <nav>
                     <a href="http://youtube.com/"><i class="fab fa-youtube"></i></a>
                     <a href="http://facebook.com/praji1525"><i class="fab fa-facebook-f"></i></a>
-                    <a href="http://github.com/praji1525"><i class="fab fa-github"></i></a>
-					<a href="http://instagram.com/praji1525"><i class="fab fa-instagram"></i>
+                    <a href="http://github.com/prabinkumarchaudhary"><i class="fab fa-github"></i></a>
+		]   <a href="http://instagram.com/praji1525"><i class="fab fa-instagram"></i>
                 </nav>
               
                
