WebSite Uploaded Successfully

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <a href="http://youtube.com/"><i class="fab fa-youtube"></i></a>
                     <a href="http://facebook.com/praji1525"><i class="fab fa-facebook-f"></i></a>
                     <a href="https://github.com/prabinkumarchaudhary"><i class="fab fa-github"></i></a>
-		]   <a href="http://instagram.com/praji1525"><i class="fab fa-instagram"></i>
+		    <a href="http://instagram.com/praji1525"><i class="fab fa-instagram"></i>
                 </nav>
               
                
