--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">Prabin Chaudhary</h1>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">praji</p>
+                <p class="masthead-subheading font-weight-light mb-0">Web Developer</p>
                 <nav>
                     <a href="http://youtube.com/"><i class="fab fa-youtube"></i></a>
                     <a href="http://facebook.com/praji1525"><i class="fab fa-facebook-f"></i></a>
